force-app/main/default/objects/NexusAI_Chat_Response__e/NexusAI_Chat_Response__e.object-meta.xml
<CustomObject>
    <label>NexusAI Chat Response</label>
    <pluralLabel>NexusAI Chat Responses</pluralLabel>
</CustomObject>