force-app/main/default/objects/NexusAI_Chat_Response__e/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Human-readable error detail when Status__c = &quot;error&quot;.</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>