force-app/main/default/objects/NexusAI_Chat_Response__e/fields/Payload_Json__c.field-meta.xml
<CustomField>
    <fullName>Payload_Json__c</fullName>
    <description>Structured JSON payload. For chat mode: {&quot;replyText&quot;:&quot;...&quot;,&quot;updatedHistory&quot;:[...]}. For agents mode: {&quot;responses&quot;:[{&quot;agentName&quot;,&quot;answer&quot;}...],&quot;suggestions&quot;:[...],&quot;updatedHistory&quot;:[...]}.</description>
    <label>Payload JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>