force-app/main/default/objects/NexusAI_Chat_Response__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>&quot;ok&quot; for a successful response, &quot;error&quot; if the subscriber could not process the request.</description>
    <label>Status</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>